<resources>
    <string name="app_name">UmbrellaFindr</string>
    <string name="title_activity_log_in">Welcome!</string>
    <string name="title_activity_profile">Umbrelly</string>

    <string name="logo_name">MainLogo</string>

    //Log in page strings
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="get_started">GET STARTED</string>
    <string name="register">REGISTER</string>
    <string name="forgotten_password"><u>forgot password?</u></string>

    //Map page strings
    <string name="hint_text_box">Click to find a <b>coffee</b> buddy</string>

    //Register page strings
    <string name="hint_first_name">Enter your <b>first name</b></string>
    <string name="hint_enter_email">Enter an authentic UCL email</string>
    <string name="hint_choose_password">Choose a strong password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish_register">REGISTER</string>
    <string name="failed_to_register">Failed to register!!! check you have completed all the boxes</string>
    <string name="confirm">Confirm</string>

    <string name="sent_verification">We have sent you an email verification, check your emails and follow the link to confirm your email address</string>
    <string name="sign_in_other_account">sign in with another account</string>
    <string name="open_mail">OPEN MAIL</string>

    <string name="hint_forgot_password">Enter the password you registered with</string>
    <string name="hint_submit">Submit</string>

    <string name="title_profile">Profile</string>
    <string name="title_dashboard"></string>
    <string name="title_messages">Messages</string>

    <string name="time_min">30</string>
    <string name="time_2">60</string>
    <string name="time_3">90</string>
    <string name="time_max">120</string>

    <string name="search_button">Look for matches</string>

    <string name="hint_profile_picture">Take/Upload a profile picture</string>
    <string name="choose_profile_picture">Choose a profile picture</string>

    <string name="picture_1">picture_1</string>
    <string name="picture_2">picture_2</string>
    <string name="picture_3">picture_3</string>
    <string name="picture_4">picture_4</string>
    <string name="bio_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="profile_name">Placeholder Name</string>
</resources>
