<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="230dp"
            android:layout_height="192dp"
            android:layout_below="@id/textView3"
            android:contentDescription="@string/picture_1"
            app:srcCompat="@drawable/ic_profile_black" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="64dp"
            android:layout_height="54dp"
            android:layout_below="@id/textView3"
            android:layout_toEndOf="@id/imageView2"
            android:contentDescription="@string/picture_4"
            app:srcCompat="@drawable/ic_profile_black" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="63dp"
            android:layout_height="54dp"
            android:layout_below="@id/imageView3"
            android:layout_toEndOf="@id/imageView2"
            android:contentDescription="@string/picture_3"
            app:srcCompat="@drawable/ic_profile_black" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="64dp"
            android:layout_height="57dp"
            android:layout_below="@id/imageView6"
            android:layout_toEndOf="@id/imageView2"
            android:contentDescription="@string/picture_2"
            app:srcCompat="@drawable/ic_profile_black" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/profile_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/bio_text" />
    </LinearLayout>

</LinearLayout>